tests/rosetta/transpiler/Pascal/active-object.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/active-object.pas
active-object.pas(5,19) Error: Identifier not found "float"
active-object.pas(5,24) Error: Error in type definition
active-object.pas(6,18) Error: Identifier not found "float"
active-object.pas(6,23) Error: Error in type definition
active-object.pas(10,6) Error: Identifier not found "float"
active-object.pas(10,11) Error: Error in type definition
active-object.pas(12,7) Error: Identifier not found "float"
active-object.pas(12,12) Error: Error in type definition
active-object.pas(15,7) Error: Identifier not found "float"
active-object.pas(15,12) Error: Error in type definition
active-object.pas(19,28) Error: Identifier not found "float"
active-object.pas(19,36) Error: Identifier not found "float"
active-object.pas(20,28) Error: Identifier not found "float"
active-object.pas(20,36) Error: Identifier not found "float"
active-object.pas(27,39) Error: Operator is not overloaded: - "<erroneous type>"
active-object.pas(38,20) Error: Incompatible type for arg no. 1: Got "ShortInt", expected "<erroneous type>"
active-object.pas(43,26) Error: Incompatible type for arg no. 1: Got "Real", expected "<erroneous type>"
active-object.pas(44,10) Error: Operator is not overloaded: "<erroneous type>" + "Real"
active-object.pas(52,18) Error: Operator is not overloaded: "<erroneous type>" + "Real"
active-object.pas(57,12) Error: Can't read or write variables of this type
active-object.pas(59) Fatal: There were 20 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
